--- a/style.css
+++ b/style.css
@@ -144,7 +144,7 @@ p {
   .div img,
   .div-rev img {
     width: 150%;
-    height: 150%;
+    height: auto;
     border: 0.1px solid white;
     border-radius: 10px;
   }
